{
  "version": 4,
  "terraform_version": "1.3.2",
  "serial": 14,
  "lineage": "12d4a0cd-392e-f70b-19c4-029637c575fb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:010139629319:internet-gateway/igw-0ad7b5a3aa942e890",
            "id": "igw-0ad7b5a3aa942e890",
            "owner_id": "010139629319",
            "tags": {
              "Name": "one-subnet-vpc-gert-igw",
              "deployment": "demo",
              "environment": "aws",
              "owner": "gert",
              "prefix": "one-subnet-vpc"
            },
            "tags_all": {
              "Name": "one-subnet-vpc-gert-igw",
              "deployment": "demo",
              "environment": "aws",
              "owner": "gert",
              "prefix": "one-subnet-vpc"
            },
            "vpc_id": "vpc-0ce1811527fd26882"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:010139629319:route-table/rtb-01b4dd0bec2de410d",
            "id": "rtb-01b4dd0bec2de410d",
            "owner_id": "010139629319",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ad7b5a3aa942e890",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "one-subnet-vpc-gert-public-rt",
              "deployment": "demo",
              "environment": "aws",
              "owner": "gert",
              "prefix": "one-subnet-vpc"
            },
            "tags_all": {
              "Name": "one-subnet-vpc-gert-public-rt",
              "deployment": "demo",
              "environment": "aws",
              "owner": "gert",
              "prefix": "one-subnet-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ce1811527fd26882"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "mgmt-subnet-to-rt-ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00331abac53fee7b9",
            "route_table_id": "rtb-01b4dd0bec2de410d",
            "subnet_id": "subnet-09c3ab83e5d211a99"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.pub-rt",
            "aws_subnet.mgmt",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mgmt_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:010139629319:security-group/sg-0caafe45b4bdcecb8",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0caafe45b4bdcecb8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8443
              }
            ],
            "name": "allow_specific_ingress_traffic",
            "name_prefix": "",
            "owner_id": "010139629319",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "one-subnet-vpc-gert-mgmt-sg",
              "deployment": "demo",
              "environment": "aws",
              "owner": "gert",
              "prefix": "one-subnet-vpc"
            },
            "tags_all": {
              "Name": "one-subnet-vpc-gert-mgmt-sg",
              "deployment": "demo",
              "environment": "aws",
              "owner": "gert",
              "prefix": "one-subnet-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ce1811527fd26882"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:010139629319:subnet/subnet-09c3ab83e5d211a99",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.10.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09c3ab83e5d211a99",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "010139629319",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "one-subnet-vpc-gert-subnet-mgmt",
              "deployment": "demo",
              "environment": "aws",
              "owner": "gert",
              "prefix": "one-subnet-vpc"
            },
            "tags_all": {
              "Name": "one-subnet-vpc-gert-subnet-mgmt",
              "deployment": "demo",
              "environment": "aws",
              "owner": "gert",
              "prefix": "one-subnet-vpc"
            },
            "vpc_id": "vpc-0ce1811527fd26882"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:010139629319:vpc/vpc-0ce1811527fd26882",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-05b7d848d4c2bac2e",
            "default_route_table_id": "rtb-00d880c962d66fcfa",
            "default_security_group_id": "sg-02b5378aca1e6fe1b",
            "dhcp_options_id": "dopt-2ed32c45",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ce1811527fd26882",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00d880c962d66fcfa",
            "owner_id": "010139629319",
            "tags": {
              "Name": "one-subnet-vpc-gert-vpc",
              "deployment": "demo",
              "environment": "aws",
              "owner": "gert",
              "prefix": "one-subnet-vpc"
            },
            "tags_all": {
              "Name": "one-subnet-vpc-gert-vpc",
              "deployment": "demo",
              "environment": "aws",
              "owner": "gert",
              "prefix": "one-subnet-vpc"
            }
          }
        }
      ]
    }
  ]
}